MIR Image replacement technique (negative letter-spacing) does not always work https://bugs.webkit.org/show_bug.cgi?id=3676 <rdar://problem/96534455>

Reviewed by Antti Koivisto.

Do not let the negative letter-spacing pull content to the logical left direction from outside
of the inline box (or in other words, do not let (negative) letter spacing spill out of the inline box).

* LayoutTests/fast/inline/negative-letter-spacing-on-inline-box-expected.html: Added.
* LayoutTests/fast/inline/negative-letter-spacing-on-inline-box.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendInlineBoxStart):
(WebCore::Layout::Line::appendInlineBoxEnd): Empty stack means line spanning inline box.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:

Canonical link: https://commits.webkit.org/258356@main